Fix footer overlaps page content

--- a/src/main/resources/WEB-INF/css/main.css
+++ b/src/main/resources/WEB-INF/css/main.css
@@ -7,6 +7,10 @@ footer p {
     font-size: small;
 }
 
+.article {
+    padding-bottom: 60px;
+}
+
 
 /* ERROR */
 
